# calls

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .uncrustify.cfg  HACKING.md  NEWS  README.md  calls.doap  gcovr.cfg  meson.build  meson_options.txt  ofono.md  org.gnome.Calls.json  run.in  sm.puri.Calls.json
.gitlab-ci/: Makefile  debian.Dockerfile  run-docker.sh
data/: calls-daemon.service.in  meson.build  org.gnome.Calls-daemon.desktop.in  org.gnome.Calls.desktop.in  org.gnome.Calls.gschema.xml  org.gnome.Calls.metainfo.xml  org.gnome.Calls.metainfo.xml.in  org.gnome.Calls.service.in  sm.puri.Calls-daemon.desktop.in  sm.puri.Calls.appdata.xml  sm.puri.Calls.desktop  sm.puri.Calls.desktop.in  sm.puri.Calls.gschema.xml  sm.puri.Calls.metainfo.xml
debian/: calls.maintscript  changelog  control  copyright  gbp.conf  gnome-calls-doc.install  gnome-calls.install  gnome-calls.maintscript  rules
doc/: call-states.dia  calls-docs.xml  gnome-calls.rst  meson.build  provider-abstraction-02.dia
doc/xml/: meson.build
libgdbofono/: call.xml  gen.sh  meson.build  modem.xml
plugins/: meson.build
plugins/dummy/: calls-dummy-call.c  calls-dummy-call.h  calls-dummy-origin.c  calls-dummy-origin.h  calls-dummy-provider.c  calls-dummy-provider.h  dummy.plugin.in  meson.build
plugins/mm/: calls-mm-call.c  calls-mm-call.h  calls-mm-origin.c  calls-mm-origin.h  calls-mm-provider.c  calls-mm-provider.h  itu-e212-iso.h  meson.build  mm.plugin.in
plugins/ofono/: calls-ofono-call.c  calls-ofono-call.h  calls-ofono-origin.c  calls-ofono-origin.h  calls-ofono-provider.c  calls-ofono-provider.h  meson.build  ofono.plugin.in
plugins/ofono/libgdbofono/: dbus-introspect.sh  modem-full.xml
plugins/provider/dummy/: calls-dummy-call.h  calls-dummy-origin.c  calls-dummy-origin.h  calls-dummy-provider.c  calls-dummy-provider.h  dummy.plugin.in.in  meson.build
plugins/provider/mm/: calls-mm-call.c  calls-mm-call.h  calls-mm-origin.c  calls-mm-origin.h  calls-mm-provider.c  calls-mm-provider.h  meson.build  mm.plugin.in.in
plugins/provider/ofono/: calls-ofono-call.c  calls-ofono-origin.c  calls-ofono-origin.h  calls-ofono-provider.c  calls-ofono-provider.h  meson.build  ofono.plugin.in.in
plugins/provider/ofono/libgdbofono/: manager.xml  meson.build  ussd.xml
plugins/provider/sip/: calls-sdp-crypto-context.c  calls-sdp-crypto-context.h  calls-sip-account-widget.c  calls-sip-account-widget.h  calls-sip-call.c  calls-sip-media-manager.c  calls-sip-media-pipeline.c  calls-sip-origin.c  calls-sip-origin.h  calls-sip-provider.c  calls-sip-provider.h  calls-sip-util.h  calls-srtp-utils.c  calls-srtp-utils.h  gst-rfc3551.c  meson.build  sip-account-widget.ui  sip.gresources.xml  sip.plugin.in  sip.plugin.in.in
plugins/provider/tests/: common.h  meson.build  setup-call.c  setup-call.h  setup-provider.c  setup-provider.h  test-call.c  test-media.c  test-origin.c  test-provider.c  test-sdp-crypto.c  test-sip.c  test-srtp.c
plugins/sip/: calls-sip-account-widget.c  calls-sip-account-widget.h  calls-sip-call.c  calls-sip-call.h  calls-sip-enums.c.in  calls-sip-media-manager.c  calls-sip-media-manager.h  calls-sip-media-pipeline.c  calls-sip-media-pipeline.h  calls-sip-origin.c  calls-sip-origin.h  calls-sip-provider.c  calls-sip-provider.h  calls-sip-util.c  calls-sip-util.h  calls-srtp-utils.c  calls-srtp-utils.h  gst-rfc3551.c  gst-rfc3551.h  meson.build  sip-account-widget.ui
po/: LINGUAS  POTFILES.in  POTFILES.skip  ab.po  ar.po  be.po  bg.po  bn.po  ca.po  calls.pot  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  fur_IT.po  gl.po  he.po  hi.po  hr.po  ht.po  hu.po  hy.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  (+29 more)
src/: calls-account-overview.c  calls-account-overview.h  calls-account-provider.c  calls-account-provider.h  calls-account-row.c  calls-account-row.h  calls-account.c  calls-account.h  calls-application.c  calls-application.h  calls-best-match-view.vala  calls-best-match.c  calls-best-match.h  calls-call-data.c  calls-call-data.h  calls-call-display.c  calls-call-display.h  calls-call-holder.c  calls-call-holder.h  calls-call-record-row.c  calls-call-record-row.h  calls-call-record.c  calls-call-record.h  calls-call-selector-item.c  calls-call-selector-item.h  calls-call-window.c  calls-call-window.h  calls-call.c  calls-call.h  calls-contacts-box.c  calls-contacts-box.h  calls-contacts-provider.c  calls-contacts-provider.h  calls-contacts-row.c  calls-contacts-row.h  calls-contacts.c  calls-contacts.h  calls-credentials.c  calls-credentials.h  calls-dbus-manager.c  (+89 more)
src/contrib/: hdy-avatar.h
src/dbus/: meson.build  org.gnome.Calls.Call.xml  org.gnome.Calls.EmergencyCalls.xml  sm.puri.Calls.Call.xml  sm.puri.Calls.xml
src/gtklistmodels/: gtkcustomfilter.c  gtkcustomsorter.c  gtkfilter.c  gtkfilter.h  gtkfilterlistmodel.c  gtkflattenlistmodel.c  gtkrbtree.c  gtkslicelistmodel.c  gtksorter.c  gtksortlistmodel.c  gtktypebuiltins.c  meson.build
src/ui/: account-overview.ui  account-row.ui  call-display.ui  call-record-row.ui  call-selector-item.ui  call-window.ui  contacts-box.ui  contacts-row.ui  encryption-indicator.ui  history-box.ui  history-header-bar.ui  in-app-notification.ui  main-window.ui  new-call-box.ui  new-call-header-bar.ui
src/wayland/: layersurface.c  layersurface.h  meson.build
subprojects/: libcall-ui.wrap
tests/: meson.build  mock-call.c  mock-call.h  mock-contacts-provider.h  mock-libfeedback.h  setup-origin.c  setup-origin.h  test-account.c  test-application.c  test-call.c  test-contacts.c  test-dbus.c  test-emergency-call-types.c  test-manager.c  test-media.c  test-origin.c  test-plugins.c  test-provider.c  test-ringer.c  test-service-providers.c  test-settings.c  test-sip.c  test-srtp.c  test-ui-call.c  test-util.c
tests/data/: serviceproviders.xml
tests/mock/: meson.build  mock-libfeedback.c
tests/mock/lfb/: lfb-enums.c  lfb-enums.h  lfb-event.c  lfb-event.h  libfeedback.c  libfeedback.h  meson.build
tests/services/: calls-server.c  meson.build  org.gnome.Calls.service.in
(+3 files in other folders)
