option('gtk_doc',
       type: 'boolean', value: false,
       description: 'Whether to generate the API reference for Calls')

option('tests',
       type: 'boolean', value: true,
       description: 'Whether to compile unit tests')

option('manpages',
       type: 'boolean', value: true,
       description: 'Whether to generate man pages')
